--- a/WebContent/css/animation.css
+++ b/WebContent/css/animation.css
@@ -121,7 +121,7 @@
 .register-left{
     text-align: center;
     color: #fff;
-    margin-top: 1%;
+    margin-top: 4%;
 }
 .register-left input{
     border: none;
@@ -131,7 +131,7 @@
     background: #f8f9fa;
     font-weight: bold;
     color: #383d41;
-    margin-top: 20%;
+    margin-top: 30%;
     margin-bottom: 3%;
     cursor: pointer;
 }
@@ -161,11 +161,55 @@
     margin-top: -9%;
 }
 .register .register-form{
-    padding: 8%;
+    padding: 10%;
+    margin-top: 10%;
+}
+.btnRegister{
+    float: right;
+    margin-top: 10%;
+    border: none;
+    border-radius: 1.5rem;
+    padding: 2%;
+    background: #0062cc;
+    color: #fff;
+    font-weight: 600;
+    width: 50%;
+    cursor: pointer;
+}
+.register .nav-tabs{
+    margin-top: 3%;
+    border: none;
+    background: #0062cc;
+    border-radius: 1.5rem;
+    width: 28%;
+    float: right;
+}
+.register .nav-tabs .nav-link{
+    padding: 2%;
+    height: 34px;
+    font-weight: 600;
+    color: #fff;
+    border-top-right-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+}
+.register .nav-tabs .nav-link:hover{
+    border: none;
+}
+.register .nav-tabs .nav-link.active{
+    width: 100px;
+    color: #0062cc;
+    border: 2px solid #0062cc;
+    border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+}
+.register-heading{
+    text-align: center;
     margin-top: 8%;
+    margin-bottom: -15%;
+    color: #495057;
 }
 
-.btn{
+.btn-form{
 	margin-top: 10%;
     border: none;
     border-radius: 1.5rem;
@@ -177,31 +221,25 @@
     cursor: pointer;
 }
 
-.btn-success {
+.btn-form-success {
 	background: #198754;
     color: #fff;
 }
-.btn-success:hover {
+.btn-form-success:hover {
     background: #36eb97;
     color: black;
 }
 
-.btn-reset {
+.btn-form-reset {
     background: #0062cc;
     color: #fff;
 }
-.btn-reset:hover {
+.btn-form-reset:hover {
     background: #7e807e;
     color: black;
 }
 
 .f-left {
 	float: left;
-}
-.register-heading{
-    text-align: center;
-    margin-top: 8%;
-    margin-bottom: -15%;
-    color: #495057;
 }
 /*---------FIN---------*/
